update: add swagger description
